[package]
name = "streamformers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
bytes = "1.5.0"
futures = "0.3.28"
llm = { git = "https://github.com/rustformers/llm" , rev = "18b2a7d" }
rand = "0.8.5"
serde = { version = "1.0.188", features = ["serde_derive"]}
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

